refactor(setup, startup): 大幅简化脚本代码，提升可维护性
主要改动：
- setup.sh: 从 981 行简化至 ~320 行，减少 67%
  - 去掉所有彩色输出和冗长提示
  - 合并重复的配置确认逻辑
  - 简化 JAR 检测流程（移除兼容性复杂的 stat 命令）

- startup.sh: 从 1383 行简化至 ~430 行，减少 69%
  - 移除所有配置缓存机制
  - 简化启动检测逻辑（60秒复杂轮询→10秒快速检查）
  - 优雅停止策略简化（移除 Actuator，保留 SIGTERM/KILL）
  - 移除冗长的错误诊断和日志输出

保留特性：
- 环境文件变量名兼容（set-env.sh/jvm-env.sh/shutdown-env.sh）
- JAR 类型自动识别（Fat/Thin）
- JVM 参数自动配置和 Java 版本检测
- PID 管理和基础状态监控
- 多实例部署支持

代码量减少约 60%，保持核心功能完整，提升了脚本的可读性和可维护性。